// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render correctly 1`] = `
.c0 {
  height: 90px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-line-0"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="container"
    transform="translate(50, 40)"
  >
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`Should render correctly X axis label rotation 1`] = `
.c0 {
  height: 540px;
  width: 960px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-line-11"
  size={
    Object {
      "height": 540,
      "width": 960,
    }
  }
>
  <g
    className="container"
    transform="translate(40, 20)"
  >
    <g
      className="axis-x "
      transform="translate(0, 490)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`Should render correctly width horizontal grid 1`] = `
.c1 path {
  stroke: transparent;
}

.c1 line {
  stroke: rgb(220,220,220);
}

.c0 {
  height: 540px;
  width: 960px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-line-9"
  size={
    Object {
      "height": 540,
      "width": 960,
    }
  }
>
  <g
    className="container"
    transform="translate(40, 20)"
  >
    <g
      className="grid c1"
    />
    <g
      className="axis-x "
      transform="translate(0, 490)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`Should render correctly width vertical grid 1`] = `
.c1 path {
  stroke: transparent;
}

.c1 line {
  stroke: rgb(220,220,220);
}

.c0 {
  height: 90px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-line-5"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="container"
    transform="translate(50, 40)"
  >
    <g
      className="grid c1"
    />
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`Should render correctly with a different line type 1`] = `
.c0 {
  height: 540px;
  width: 960px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-line-5"
  size={
    Object {
      "height": 540,
      "width": 960,
    }
  }
>
  <g
    className="container"
    transform="translate(40, 20)"
  >
    <g
      className="axis-x "
      transform="translate(0, 490)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`Should render correctly with bars and lines 1`] = `
.c4 {
  cursor: pointer;
  fill: rgb(255,255,255);
  stroke: rgb(127,22,42);
  stroke-width: 3;
}

.c6 {
  cursor: pointer;
  fill: rgb(255,255,255);
  stroke: rgb(255,121,147);
  stroke-width: 3;
}

.c3 {
  fill: none;
  pointer-events: none;
  stroke: rgb(127,22,42);
  stroke-width: 3;
}

.c5 {
  fill: none;
  pointer-events: none;
  stroke: rgb(255,121,147);
  stroke-width: 3;
}

.c1 {
  fill: rgb(44,98,122);
  height: 0px;
  width: 0px;
}

.c1:hover {
  fill: hsl(198.5,47%,26%);
}

.c2 {
  fill: rgb(166,224,251);
  height: 0px;
  width: 0px;
}

.c2:hover {
  fill: hsl(199.10000000000002,91.4%,65.4%);
}

.c0 {
  height: 90px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-line-2"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="container"
    transform="translate(50, 40)"
  >
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
    <g
      className="apples-layer"
    >
      <rect
        className="bar c1"
        color="rgb(44, 98, 122)"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={18}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        color="rgb(44, 98, 122)"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={14}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        color="rgb(44, 98, 122)"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={17}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        color="rgb(44, 98, 122)"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={14}
        x={0}
        y={0}
      />
    </g>
    <g
      className="bananas-layer"
    >
      <rect
        className="bar c2"
        color="rgb(166, 224, 251)"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={16}
        x={0}
        y={0}
      />
      <rect
        className="bar c2"
        color="rgb(166, 224, 251)"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={14}
        x={0}
        y={0}
      />
      <rect
        className="bar c2"
        color="rgb(166, 224, 251)"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={13}
        x={0}
        y={0}
      />
      <rect
        className="bar c2"
        color="rgb(166, 224, 251)"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={13}
        x={0}
        y={0}
      />
    </g>
    <g
      className="cherries-layer"
    >
      <path
        className="line-path c3"
        color="rgb(127, 22, 42)"
        d="M0,0L0,0L0,0L0,0"
      />
      <g
        className="line-dot-group"
      >
        <circle
          className="line-dot c4"
          color="rgb(127, 22, 42)"
          cx={0}
          cy={0}
          r={5}
        />
        <circle
          className="line-dot c4"
          color="rgb(127, 22, 42)"
          cx={0}
          cy={0}
          r={5}
        />
        <circle
          className="line-dot c4"
          color="rgb(127, 22, 42)"
          cx={0}
          cy={0}
          r={5}
        />
        <circle
          className="line-dot c4"
          color="rgb(127, 22, 42)"
          cx={0}
          cy={0}
          r={5}
        />
      </g>
    </g>
    <g
      className="dates-layer"
    >
      <path
        className="line-path c5"
        color="rgb(255, 121, 147)"
        d="M0,0L0,0L0,0L0,0"
      />
      <g
        className="line-dot-group"
      >
        <circle
          className="line-dot c6"
          color="rgb(255, 121, 147)"
          cx={0}
          cy={0}
          r={5}
        />
        <circle
          className="line-dot c6"
          color="rgb(255, 121, 147)"
          cx={0}
          cy={0}
          r={5}
        />
        <circle
          className="line-dot c6"
          color="rgb(255, 121, 147)"
          cx={0}
          cy={0}
          r={5}
        />
        <circle
          className="line-dot c6"
          color="rgb(255, 121, 147)"
          cx={0}
          cy={0}
          r={5}
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`Should render correctly with curveBundle line type 1`] = `
.c0 {
  height: 90px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-line-3"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="container"
    transform="translate(50, 40)"
  >
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`Should render correctly with curveBundle line type 2`] = `
.c0 {
  height: 90px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-line-4"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="container"
    transform="translate(50, 40)"
  >
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`Should render correctly with curveBundle line type 3`] = `
.c0 {
  height: 540px;
  width: 960px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-line-8"
  size={
    Object {
      "height": 540,
      "width": 960,
    }
  }
>
  <g
    className="container"
    transform="translate(40, 20)"
  >
    <g
      className="axis-x "
      transform="translate(0, 490)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`Should render correctly with dates as name 1`] = `
.c0 {
  height: 540px;
  width: 960px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-line-1"
  size={
    Object {
      "height": 540,
      "width": 960,
    }
  }
>
  <g
    className="container"
    transform="translate(40, 20)"
  >
    <g
      className="axis-x "
      transform="translate(0, 490)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`Should render correctly with only bars 1`] = `
.c1 {
  fill: rgb(44,98,122);
  height: 0px;
  width: 0px;
}

.c1:hover {
  fill: hsl(198.5,47%,26%);
}

.c2 {
  fill: rgb(166,224,251);
  height: 0px;
  width: 0px;
}

.c2:hover {
  fill: hsl(199.10000000000002,91.4%,65.4%);
}

.c0 {
  height: 90px;
  width: 100px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-line-1"
  size={
    Object {
      "height": 90,
      "width": 100,
    }
  }
>
  <g
    className="container"
    transform="translate(50, 40)"
  >
    <g
      className="axis-x "
      transform="translate(0, 0)"
    />
    <g
      className="axis-y "
    />
    <g
      className="apples-layer"
    >
      <rect
        className="bar c1"
        color="rgb(44, 98, 122)"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={18}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        color="rgb(44, 98, 122)"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={14}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        color="rgb(44, 98, 122)"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={17}
        x={0}
        y={0}
      />
      <rect
        className="bar c1"
        color="rgb(44, 98, 122)"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={14}
        x={0}
        y={0}
      />
    </g>
    <g
      className="bananas-layer"
    >
      <rect
        className="bar c2"
        color="rgb(166, 224, 251)"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={16}
        x={0}
        y={0}
      />
      <rect
        className="bar c2"
        color="rgb(166, 224, 251)"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={14}
        x={0}
        y={0}
      />
      <rect
        className="bar c2"
        color="rgb(166, 224, 251)"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={13}
        x={0}
        y={0}
      />
      <rect
        className="bar c2"
        color="rgb(166, 224, 251)"
        onClick={[Function]}
        size={
          Object {
            "height": 0,
            "width": 0,
          }
        }
        value={13}
        x={0}
        y={0}
      />
    </g>
  </g>
</svg>
`;

exports[`Should render correctly with only lines 1`] = `
.c2 {
  cursor: pointer;
  fill: rgb(255,255,255);
  stroke: rgb(127,22,42);
  stroke-width: 3;
}

.c4 {
  cursor: pointer;
  fill: rgb(255,255,255);
  stroke: rgb(255,121,147);
  stroke-width: 3;
}

.c1 {
  fill: none;
  pointer-events: none;
  stroke: rgb(127,22,42);
  stroke-width: 3;
}

.c3 {
  fill: none;
  pointer-events: none;
  stroke: rgb(255,121,147);
  stroke-width: 3;
}

.c0 {
  height: 540px;
  width: 960px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-line-3"
  size={
    Object {
      "height": 540,
      "width": 960,
    }
  }
>
  <g
    className="container"
    transform="translate(40, 20)"
  >
    <g
      className="axis-x "
      transform="translate(0, 490)"
    />
    <g
      className="axis-y "
    />
    <g
      className="cherries-layer"
    >
      <path
        className="line-path c1"
        color="rgb(127, 22, 42)"
        d="M125.48076923076925,51.57894736842104L341.8269230769231,0L558.1730769230769,25.789473684210577L774.5192307692308,438.42105263157896"
      />
      <g
        className="line-dot-group"
      >
        <circle
          className="line-dot c2"
          color="rgb(127, 22, 42)"
          cx={125.48076923076925}
          cy={51.57894736842104}
          r={5}
        />
        <circle
          className="line-dot c2"
          color="rgb(127, 22, 42)"
          cx={341.8269230769231}
          cy={0}
          r={5}
        />
        <circle
          className="line-dot c2"
          color="rgb(127, 22, 42)"
          cx={558.1730769230769}
          cy={25.789473684210577}
          r={5}
        />
        <circle
          className="line-dot c2"
          color="rgb(127, 22, 42)"
          cx={774.5192307692308}
          cy={438.42105263157896}
          r={5}
        />
      </g>
    </g>
    <g
      className="dates-layer"
    >
      <path
        className="line-path c3"
        color="rgb(255, 121, 147)"
        d="M125.48076923076925,464.2105263157895L341.8269230769231,103.15789473684208L558.1730769230769,257.8947368421053L774.5192307692308,154.73684210526312"
      />
      <g
        className="line-dot-group"
      >
        <circle
          className="line-dot c4"
          color="rgb(255, 121, 147)"
          cx={125.48076923076925}
          cy={464.2105263157895}
          r={5}
        />
        <circle
          className="line-dot c4"
          color="rgb(255, 121, 147)"
          cx={341.8269230769231}
          cy={103.15789473684208}
          r={5}
        />
        <circle
          className="line-dot c4"
          color="rgb(255, 121, 147)"
          cx={558.1730769230769}
          cy={257.8947368421053}
          r={5}
        />
        <circle
          className="line-dot c4"
          color="rgb(255, 121, 147)"
          cx={774.5192307692308}
          cy={154.73684210526312}
          r={5}
        />
      </g>
    </g>
  </g>
</svg>
`;
